src/main/Java/com/github/intellij/gno/language/parser/GnoParser.java
package com.github.intellij.gno.language.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static com.github.intellij.gno.language.GnoTypes.*;
import static com.github.intellij.gno.language.parser.GnoParserUtil.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;
import org.jetbrains.annotations.NotNull;

@SuppressWarnings({"SimplifiableIfStatement"})
public class GnoParser implements PsiParser, LightPsiParser {

    public @NotNull ASTNode parse(@NotNull IElementType t, @NotNull PsiBuilder b) {
        parseLight(t, b);
        return b.getTreeBuilt();
    }

    public void parseLight(IElementType t, PsiBuilder b) {
        boolean r;
        b = adapt_builder_(t, b, this, EXTENDS_SETS_);
        Marker m = enter_section_(b, 0, _COLLAPSE_, null);
        if (t == ANONYMOUS_FIELD_DEFINITION) {
            r = AnonymousFieldDefinition(b, 0);
        }
        else if (t == ARGUMENT_LIST) {
            r = ArgumentList(b, 0);
        }
        else if (t == ARRAY_OR_SLICE_TYPE) {
            r = ArrayOrSliceType(b, 0);
        }
        else if (t == ASSIGNMENT_STATEMENT) {
            r = AssignmentStatement(b, 0);
        }
        else if (t == BLOCK) {
            r = Block(b, 0);
        }
        else if (t == BREAK_STATEMENT) {
            r = BreakStatement(b, 0);
        }
        else if (t == BUILTIN_ARGUMENT_LIST) {
            r = BuiltinArgumentList(b, 0);
        }
        else if (t == CHANNEL_TYPE) {
            r = ChannelType(b, 0);
        }
        else if (t == COMM_CASE) {
            r = CommCase(b, 0);
        }
        else if (t == COMM_CLAUSE) {
            r = CommClause(b, 0);
        }
        else if (t == CONST_DECLARATION) {
            r = ConstDeclaration(b, 0);
        }
        else if (t == CONST_DEFINITION) {
            r = ConstDefinition(b, 0);
        }
        else if (t == CONST_SPEC) {
            r = ConstSpec(b, 0);
        }
        else if (t == CONTINUE_STATEMENT) {
            r = ContinueStatement(b, 0);
        }
        else if (t == DEFER_STATEMENT) {
            r = DeferStatement(b, 0);
        }
        else if (t == ELEMENT) {
            r = Element(b, 0);
        }
        else if (t == ELSE_STATEMENT) {
            r = ElseStatement(b, 0);
        }
        else if (t == EXPR_CASE_CLAUSE) {
            r = ExprCaseClause(b, 0);
        }
        else if (t == EXPR_SWITCH_STATEMENT) {
            r = ExprSwitchStatement(b, 0);
        }
        else if (t == EXPRESSION) {
            r = Expression(b, 0, -1);
        }
        else if (t == FALLTHROUGH_STATEMENT) {
            r = FallthroughStatement(b, 0);
        }
        else if (t == FIELD_DECLARATION) {
            r = FieldDeclaration(b, 0);
        }
        else if (t == FIELD_DEFINITION) {
            r = FieldDefinition(b, 0);
        }
        else if (t == FIELD_NAME) {
            r = FieldName(b, 0);
        }
        else if (t == FOR_CLAUSE) {
            r = ForClause(b, 0);
        }
        else if (t == FOR_STATEMENT) {
            r = ForStatement(b, 0);
        }
        else if (t == FUNCTION_DECLARATION) {
            r = FunctionDeclaration(b, 0);
        }
        else if (t == FUNCTION_TYPE) {
            r = FunctionType(b, 0);
        }
        else if (t == GNO_STATEMENT) {
            r = GnoStatement(b, 0);
        }
        else if (t == GNOTO_STATEMENT) {
            r = GnotoStatement(b, 0);
        }
        else if (t == IF_STATEMENT) {
            r = IfStatement(b, 0);
        }
        else if (t == IMPORT_DECLARATION) {
            r = ImportDeclaration(b, 0);
        }
        else if (t == IMPORT_LIST) {
            r = ImportList(b, 0);
        }
        else if (t == IMPORT_SPEC) {
            r = ImportSpec(b, 0);
        }
        else if (t == IMPORT_STRING) {
            r = ImportString(b, 0);
        }
        else if (t == INC_DEC_STATEMENT) {
            r = IncDecStatement(b, 0);
        }
        else if (t == INTERFACE_TYPE) {
            r = InterfaceType(b, 0);
        }
        else if (t == KEY) {
            r = Key(b, 0);
        }
        else if (t == LABEL_DEFINITION) {
            r = LabelDefinition(b, 0);
        }
        else if (t == LABEL_REF) {
            r = LabelRef(b, 0);
        }
        else if (t == LABELED_STATEMENT) {
            r = LabeledStatement(b, 0);
        }
        else if (t == LEFT_HAND_EXPR_LIST) {
            r = LeftHandExprList(b, 0);
        }
        else if (t == LITERAL_TYPE_EXPR) {
            r = LiteralTypeExpr(b, 0);
        }
        else if (t == LITERAL_VALUE) {
            r = LiteralValue(b, 0);
        }
        else if (t == MAP_TYPE) {
            r = MapType(b, 0);
        }
        else if (t == METHOD_DECLARATION) {
            r = MethodDeclaration(b, 0);
        }
        else if (t == METHOD_SPEC) {
            r = MethodSpec(b, 0);
        }
        else if (t == PACKAGE_CLAUSE) {
            r = PackageClause(b, 0);
        }
        else if (t == PAR_TYPE) {
            r = ParType(b, 0);
        }
        else if (t == PARAM_DEFINITION) {
            r = ParamDefinition(b, 0);
        }
        else if (t == PARAMETER_DECLARATION) {
            r = ParameterDeclaration(b, 0);
        }
        else if (t == PARAMETERS) {
            r = Parameters(b, 0);
        }
        else if (t == POINTER_TYPE) {
            r = PointerType(b, 0);
        }
        else if (t == RANGE_CLAUSE) {
            r = RangeClause(b, 0);
        }
        else if (t == RECEIVER) {
            r = Receiver(b, 0);
        }
        else if (t == RECV_STATEMENT) {
            r = RecvStatement(b, 0);
        }
        else if (t == REFERENCE_EXPRESSION) {
            r = ReferenceExpression(b, 0);
        }
        else if (t == RESULT) {
            r = Result(b, 0);
        }
        else if (t == RETURN_STATEMENT) {
            r = ReturnStatement(b, 0);
        }
        else if (t == SELECT_STATEMENT) {
            r = SelectStatement(b, 0);
        }
        else if (t == SEND_STATEMENT) {
            r = SendStatement(b, 0);
        }
        else if (t == SHORT_VAR_DECLARATION) {
            r = ShortVarDeclaration(b, 0);
        }
        else if (t == SIGNATURE) {
            r = Signature(b, 0);
        }
        else if (t == SIMPLE_STATEMENT) {
            r = SimpleStatement(b, 0);
        }
        else if (t == SPEC_TYPE) {
            r = SpecType(b, 0);
        }
        else if (t == STATEMENT) {
            r = Statement(b, 0);
        }
        else if (t == STRING_LITERAL) {
            r = StringLiteral(b, 0);
        }
        else if (t == STRUCT_TYPE) {
            r = StructType(b, 0);
        }
        else if (t == SWITCH_START) {
            r = SwitchStart(b, 0);
        }
        else if (t == SWITCH_STATEMENT) {
            r = SwitchStatement(b, 0);
        }
        else if (t == TAG) {
            r = Tag(b, 0);
        }
        else if (t == TYPE) {
            r = Type(b, 0);
        }
        else if (t == TYPE_CASE_CLAUSE) {
            r = TypeCaseClause(b, 0);
        }
        else if (t == TYPE_DECLARATION) {
            r = TypeDeclaration(b, 0);
        }
        else if (t == TYPE_GUARD) {
            r = TypeGuard(b, 0);
        }
        else if (t == TYPE_LIST) {
            r = TypeList(b, 0);
        }
        else if (t == TYPE_REFERENCE_EXPRESSION) {
            r = TypeReferenceExpression(b, 0);
        }
        else if (t == TYPE_SPEC) {
            r = TypeSpec(b, 0);
        }
        else if (t == TYPE_SWITCH_GUARD) {
            r = TypeSwitchGuard(b, 0);
        }
        else if (t == TYPE_SWITCH_STATEMENT) {
            r = TypeSwitchStatement(b, 0);
        }
        else if (t == VALUE) {
            r = Value(b, 0);
        }
        else if (t == VAR_DECLARATION) {
            r = VarDeclaration(b, 0);
        }
        else if (t == VAR_DEFINITION) {
            r = VarDefinition(b, 0);
        }
        else if (t == VAR_SPEC) {
            r = VarSpec(b, 0);
        }
        else if (t == ASSIGN_OP) {
            r = assign_op(b, 0);
        }
        else {
            r = parse_root_(t, b);
        }
        exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
    }

    protected boolean parse_root_(IElementType t, PsiBuilder b) {
        return File(b, 1);
    }

    public static final TokenSet[] EXTENDS_SETS_ = new TokenSet[] {
            create_token_set_(ARGUMENT_LIST, BUILTIN_ARGUMENT_LIST),
            create_token_set_(RANGE_CLAUSE, RECV_STATEMENT, SHORT_VAR_DECLARATION, VAR_SPEC),
            create_token_set_(ARRAY_OR_SLICE_TYPE, CHANNEL_TYPE, FUNCTION_TYPE, INTERFACE_TYPE,
                    MAP_TYPE, PAR_TYPE, POINTER_TYPE, STRUCT_TYPE,
                    TYPE, TYPE_LIST),
            create_token_set_(ASSIGNMENT_STATEMENT, BREAK_STATEMENT, CONTINUE_STATEMENT, DEFER_STATEMENT,
                    ELSE_STATEMENT, EXPR_SWITCH_STATEMENT, FALLTHROUGH_STATEMENT, FOR_STATEMENT,
                    GNOTO_STATEMENT, GNO_STATEMENT, IF_STATEMENT, INC_DEC_STATEMENT,
                    LABELED_STATEMENT, RETURN_STATEMENT, SELECT_STATEMENT, SEND_STATEMENT,
                    SIMPLE_STATEMENT, STATEMENT, SWITCH_STATEMENT, TYPE_SWITCH_STATEMENT),
            create_token_set_(ADD_EXPR, AND_EXPR, BUILTIN_CALL_EXPR, CALL_EXPR,
                    COMPOSITE_LIT, CONDITIONAL_EXPR, CONVERSION_EXPR, EXPRESSION,
                    FUNCTION_LIT, INDEX_OR_SLICE_EXPR, LITERAL, LITERAL_TYPE_EXPR,
                    MUL_EXPR, OR_EXPR, PARENTHESES_EXPR, REFERENCE_EXPRESSION,
                    SELECTOR_EXPR, STRING_LITERAL, TYPE_ASSERTION_EXPR, UNARY_EXPR),
    };

    /* ********************************************************** */
    // '+' | '-' | '|' | '^'
    static boolean AddOp(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "AddOp")) return false;
        boolean r;
        Marker m = enter_section_(b);
        r = consumeToken(b, PLUS);
        if (!r) r = consumeToken(b, MINUS);
        if (!r) r = consumeToken(b, BIT_OR);
        if (!r) r = consumeToken(b, BIT_XOR);
        exit_section_(b, m, null, r);
        return r;
    }

    /* ********************************************************** */
    // Type
    public static boolean AnonymousFieldDefinition(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "AnonymousFieldDefinition")) return false;
        boolean r;
        Marker m = enter_section_(b, l, _NONE_, ANONYMOUS_FIELD_DEFINITION, "<anonymous field definition>");
        r = Type(b, l + 1);
        exit_section_(b, l, m, r, false, null);
        return r;
    }

    /* ********************************************************** */
    // '(' [ ExpressionArgList '...'? ','? ] ')'
    public static boolean ArgumentList(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "ArgumentList")) return false;
        if (!nextTokenIs(b, LPAREN)) return false;
        boolean r, p;
        Marker m = enter_section_(b, l, _NONE_, ARGUMENT_LIST, null);
        r = consumeToken(b, LPAREN);
        p = r; // pin = 1
        r = r && report_error_(b, ArgumentList_1(b, l + 1));
        r = p && consumeToken(b, RPAREN) && r;
        exit_section_(b, l, m, r, p, null);
        return r || p;
    }

    // [ ExpressionArgList '...'? ','? ]
    private static boolean ArgumentList_1(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "ArgumentList_1")) return false;
        ArgumentList_1_0(b, l + 1);
        return true;
    }

    // ExpressionArgList '...'? ','?
    private static void ArgumentList_1_0(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "ArgumentList_1_0")) return;
        boolean r;
        Marker m = enter_section_(b);
        r = ExpressionArgList(b, l + 1);
        r = r && ArgumentList_1_0_1(b, l + 1);
        r = r && ArgumentList_1_0_2(b, l + 1);
        exit_section_(b, m, null, r);
    }

    // '...'?
    private static boolean ArgumentList_1_0_1(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "ArgumentList_1_0_1")) return false;
        consumeToken(b, TRIPLE_DOT);
        return true;
    }

    // ','?
    private static boolean ArgumentList_1_0_2(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "ArgumentList_1_0_2")) return false;
        consumeToken(b, COMMA);
        return true;
    }

    /* ********************************************************** */
    // '[' ('...'|Expression?) ']' Type
    public static boolean ArrayOrSliceType(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "ArrayOrSliceType")) return false;
        if (!nextTokenIs(b, LBRACK)) return false;
        boolean r, p;
        Marker m = enter_section_(b, l, _NONE_, ARRAY_OR_SLICE_TYPE, null);
        r = consumeToken(b, LBRACK);
        p = r; // pin = 1
        r = r && report_error_(b, ArrayOrSliceType_1(b, l + 1));
        r = p && report_error_(b, consumeToken(b, RBRACK)) && r;
        r = p && Type(b, l + 1) && r;
        exit_section_(b, l, m, r, p, null);
        return r || p;
    }

    // '...'|Expression?
    private static boolean ArrayOrSliceType_1(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "ArrayOrSliceType_1")) return false;
        boolean r;
        Marker m = enter_section_(b);
        r = consumeToken(b, TRIPLE_DOT);
        if (!r) r = ArrayOrSliceType_1_1(b, l + 1);
        exit_section_(b, m, null, r);
        return r;
    }

    // Expression?
    private static boolean ArrayOrSliceType_1_1(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "ArrayOrSliceType_1_1")) return false;
        Expression(b, l + 1, -1);
        return true;
    }

    /* ********************************************************** */
    // assign_op ExpressionList
    public static boolean AssignmentStatement(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "AssignmentStatement")) return false;
        boolean r, p;
        Marker m = enter_section_(b, l, _LEFT_, ASSIGNMENT_STATEMENT, "<assignment statement>");
        r = assign_op(b, l + 1);
        p = r; // pin = 1
        r = r && ExpressionList(b, l + 1);
        exit_section_(b, l, m, r, p, null);
        return r || p;
    }

    /* ********************************************************** */
    // BlockInner
    public static boolean Block(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "Block")) return false;
        if (!nextTokenIs(b, LBRACE)) return false;
        boolean r;
        Marker m = enter_section_(b);
        r = BlockInner(b, l + 1);
        exit_section_(b, m, BLOCK, r);
        return r;
    }

    /* ********************************************************** */
    // '{' ('}' | (<<withOff Statements "BLOCK?" "PAR">> | (!() Statements)) '}')
    static boolean BlockInner(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "BlockInner")) return false;
        if (!nextTokenIs(b, LBRACE)) return false;
        boolean r, p;
        Marker m = enter_section_(b, l, _NONE_);
        r = consumeToken(b, LBRACE);
        p = r; // pin = 1
        r = r && BlockInner_1(b, l + 1);
        exit_section_(b, l, m, r, p, null);
        return r || p;
    }

    // '}' | (<<withOff Statements "BLOCK?" "PAR">> | (!() Statements)) '}'
    private static boolean BlockInner_1(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "BlockInner_1")) return false;
        boolean r;
        Marker m = enter_section_(b);
        r = consumeToken(b, RBRACE);
        if (!r) r = BlockInner_1_1(b, l + 1);
        exit_section_(b, m, null, r);
        return r;
    }

    // (<<withOff Statements "BLOCK?" "PAR">> | (!() Statements)) '}'
    private static boolean BlockInner_1_1(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "BlockInner_1_1")) return false;
        boolean r, p;
        Marker m = enter_section_(b, l, _NONE_);
        r = BlockInner_1_1_0(b, l + 1);
        p = r; // pin = 1
        r = r && consumeToken(b, RBRACE);
        exit_section_(b, l, m, r, p, null);
        return r || p;
    }

    // <<withOff Statements "BLOCK?" "PAR">> | (!() Statements)
    private static boolean BlockInner_1_1_0(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "BlockInner_1_1_0")) return false;
        boolean r;
        Marker m = enter_section_(b);
        r = withOff(b, l + 1, Statements_parser_, "BLOCK?", "PAR");
        if (!r) r = BlockInner_1_1_0_1(b, l + 1);
        exit_section_(b, m, null, r);
        return r;
    }

    // !() Statements
    private static boolean BlockInner_1_1_0_1(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "BlockInner_1_1_0_1")) return false;
        boolean r, p;
        Marker m = enter_section_(b, l, _NONE_);
        r = BlockInner_1_1_0_1_0(b, l + 1);
        p = r; // pin = 1
        r = r && Statements(b, l + 1);
        exit_section_(b, l, m, r, p, null);
        return r || p;
    }

    // !()
    private static boolean BlockInner_1_1_0_1_0(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "BlockInner_1_1_0_1_0")) return false;
        boolean r;
        Marker m = enter_section_(b, l, _NOT_);
        r = !BlockInner_1_1_0_1_0_0(b, l + 1);
        exit_section_(b, l, m, r, false, null);
        return r;
    }

    // ()
    private static boolean BlockInner_1_1_0_1_0_0(PsiBuilder b, int l) {
        return true;
    }

    /* ********************************************************** */
    // <<consumeBlock>> | BlockInner
    public static boolean BlockWithConsume(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "BlockWithConsume")) return false;
        boolean r;
        Marker m = enter_section_(b, l, _COLLAPSE_, BLOCK, "<block with consume>");
        r = consumeBlock(b, l + 1);
        if (!r) r = BlockInner(b, l + 1);
        exit_section_(b, l, m, r, false, null);
        return r;
    }

    /* ********************************************************** */
    // break LabelRef?
    public static boolean BreakStatement(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "BreakStatement")) return false;
        if (!nextTokenIs(b, BREAK)) return false;
        boolean r, p;
        Marker m = enter_section_(b, l, _NONE_, BREAK_STATEMENT, null);
        r = consumeToken(b, BREAK);
        p = r; // pin = 1
        r = r && BreakStatement_1(b, l + 1);
        exit_section_(b, l, m, r, p, null);
        return r || p;
    }

    // LabelRef?
    private static boolean BreakStatement_1(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "BreakStatement_1")) return false;
        LabelRef(b, l + 1);
        return true;
    }

    /* ********************************************************** */
    // Type [ ',' BuiltinArgsTail ] | BuiltinArgsTail
    static boolean BuiltinArgsInner(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "BuiltinArgsInner")) return false;
        boolean r;
        Marker m = enter_section_(b);
        r = BuiltinArgsInner_0(b, l + 1);
        if (!r) r = BuiltinArgsTail(b, l + 1);
        exit_section_(b, m, null, r);
        return r;
    }

    // Type [ ',' BuiltinArgsTail ]
    private static boolean BuiltinArgsInner_0(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "BuiltinArgsInner_0")) return false;
        boolean r;
        Marker m = enter_section_(b);
        r = Type(b, l + 1);
        r = r && BuiltinArgsInner_0_1(b, l + 1);
        exit_section_(b, m, null, r);
        return r;
    }

    // [ ',' BuiltinArgsTail ]
    private static boolean BuiltinArgsInner_0_1(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "BuiltinArgsInner_0_1")) return false;
        BuiltinArgsInner_0_1_0(b, l + 1);
        return true;
    }

    // ',' BuiltinArgsTail
    private static boolean BuiltinArgsInner_0_1_0(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "BuiltinArgsInner_0_1_0")) return false;
        boolean r;
        Marker m = enter_section_(b);
        r = consumeToken(b, COMMA);
        r = r && BuiltinArgsTail(b, l + 1);
        exit_section_(b, m, null, r);
        return r;
    }

    /* ********************************************************** */
    // ExpressionList '...'?
    static boolean BuiltinArgsTail(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "BuiltinArgsTail")) return false;
        boolean r;
        Marker m = enter_section_(b);
        r = ExpressionList(b, l + 1);
        r = r && BuiltinArgsTail_1(b, l + 1);
        exit_section_(b, m, null, r);
        return r;
    }

    // '...'?
    private static boolean BuiltinArgsTail_1(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "BuiltinArgsTail_1")) return false;
        consumeToken(b, TRIPLE_DOT);
        return true;
    }

    /* ********************************************************** */
    // '(' [ BuiltinArgsInner ','? ] ')'
    public static boolean BuiltinArgumentList(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "BuiltinArgumentList")) return false;
        if (!nextTokenIs(b, LPAREN)) return false;
        boolean r, p;
        Marker m = enter_section_(b, l, _NONE_, BUILTIN_ARGUMENT_LIST, null);
        r = consumeToken(b, LPAREN);
        p = r; // pin = 1
        r = r && report_error_(b, BuiltinArgumentList_1(b, l + 1));
        r = p && consumeToken(b, RPAREN) && r;
        exit_section_(b, l, m, r, p, null);
        return r || p;
    }

    // [ BuiltinArgsInner ','? ]
    private static boolean BuiltinArgumentList_1(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "BuiltinArgumentList_1")) return false;
        BuiltinArgumentList_1_0(b, l + 1);
        return true;
    }

    // BuiltinArgsInner ','?
    private static boolean BuiltinArgumentList_1_0(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "BuiltinArgumentList_1_0")) return false;
        boolean r;
        Marker m = enter_section_(b);
        r = BuiltinArgsInner(b, l + 1);
        r = r && BuiltinArgumentList_1_0_1(b, l + 1);
        exit_section_(b, m, null, r);
        return r;
    }

    // ','?
    private static boolean BuiltinArgumentList_1_0_1(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "BuiltinArgumentList_1_0_1")) return false;
        consumeToken(b, COMMA);
        return true;
    }

    /* ********************************************************** */
    // chan '<-'? | '<-' chan
    static boolean ChanTypePrefix(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "ChanTypePrefix")) return false;
        if (!nextTokenIs(b, "", SEND_CHANNEL, CHAN)) return false;
        boolean r;
        Marker m = enter_section_(b);
        r = ChanTypePrefix_0(b, l + 1);
        if (!r) r = ChanTypePrefix_1(b, l + 1);
        exit_section_(b, m, null, r);
        return r;
    }

    // chan '<-'?
    private static boolean ChanTypePrefix_0(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "ChanTypePrefix_0")) return false;
        boolean r, p;
        Marker m = enter_section_(b, l, _NONE_);
        r = consumeToken(b, CHAN);
        p = r; // pin = 1
        r = r && ChanTypePrefix_0_1(b, l + 1);
        exit_section_(b, l, m, r, p, null);
        return r || p;
    }

    // '<-'?
    private static boolean ChanTypePrefix_0_1(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "ChanTypePrefix_0_1")) return false;
        consumeToken(b, SEND_CHANNEL);
        return true;
    }

    // '<-' chan
    private static boolean ChanTypePrefix_1(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "ChanTypePrefix_1")) return false;
        boolean r, p;
        Marker m = enter_section_(b, l, _NONE_);
        r = consumeToken(b, SEND_CHANNEL);
        p = r; // pin = 1
        r = r && consumeToken(b, CHAN);
        exit_section_(b, l, m, r, p, null);
        return r || p;
    }

    /* ********************************************************** */
    // ChanTypePrefix Type
    public static boolean ChannelType(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "ChannelType")) return false;
        if (!nextTokenIs(b, "<channel type>", SEND_CHANNEL, CHAN)) return false;
        boolean r, p;
        Marker m = enter_section_(b, l, _COLLAPSE_, CHANNEL_TYPE, "<channel type>");
        r = ChanTypePrefix(b, l + 1);
        p = r; // pin = 1
        r = r && Type(b, l + 1);
        exit_section_(b, l, m, r, p, null);
        return r || p;
    }

    /* ********************************************************** */
    // case ( Expression SendStatement | RecvStatement ) | default
    public static boolean CommCase(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "CommCase")) return false;
        if (!nextTokenIs(b, "<comm case>", CASE, DEFAULT)) return false;
        boolean r;
        Marker m = enter_section_(b, l, _NONE_, COMM_CASE, "<comm case>");
        r = CommCase_0(b, l + 1);
        if (!r) r = consumeToken(b, DEFAULT);
        exit_section_(b, l, m, r, false, null);
        return r;
    }

    // case ( Expression SendStatement | RecvStatement )
    private static boolean CommCase_0(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "CommCase_0")) return false;
        boolean r, p;
        Marker m = enter_section_(b, l, _NONE_);
        r = consumeToken(b, CASE);
        p = r; // pin = case
        r = r && CommCase_0_1(b, l + 1);
        exit_section_(b, l, m, r, p, null);
        return r || p;
    }

    // Expression SendStatement | RecvStatement
    private static boolean CommCase_0_1(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "CommCase_0_1")) return false;
        boolean r;
        Marker m = enter_section_(b);
        r = CommCase_0_1_0(b, l + 1);
        if (!r) r = RecvStatement(b, l + 1);
        exit_section_(b, m, null, r);
        return r;
    }

    // Expression SendStatement
    private static boolean CommCase_0_1_0(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "CommCase_0_1_0")) return false;
        boolean r;
        Marker m = enter_section_(b);
        r = Expression(b, l + 1, -1);
        r = r && SendStatement(b, l + 1);
        exit_section_(b, m, null, r);
        return r;
    }

    /* ********************************************************** */
    // CommCase ':' Statements?
    public static boolean CommClause(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "CommClause")) return false;
        if (!nextTokenIs(b, "<comm clause>", CASE, DEFAULT)) return false;
        boolean r, p;
        Marker m = enter_section_(b, l, _NONE_, COMM_CLAUSE, "<comm clause>");
        r = CommCase(b, l + 1);
        p = r; // pin = 1
        r = r && report_error_(b, consumeToken(b, COLON));
        r = p && CommClause_2(b, l + 1) && r;
        exit_section_(b, l, m, r, p, null);
        return r || p;
    }

    // Statements?
    private static boolean CommClause_2(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "CommClause_2")) return false;
        Statements(b, l + 1);
        return true;
    }

    /* ********************************************************** */
    // <<enterMode "BLOCK?">> SimpleStatementOpt Expression? <<exitModeSafe "BLOCK?">>
    static boolean Condition(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "Condition")) return false;
        boolean r;
        Marker m = enter_section_(b);
        r = enterMode(b, l + 1, "BLOCK?");
        r = r && SimpleStatementOpt(b, l + 1);
        r = r && Condition_2(b, l + 1);
        r = r && exitModeSafe(b, l + 1, "BLOCK?");
        exit_section_(b, m, null, r);
        return r;
    }

    // Expression?
    private static boolean Condition_2(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "Condition_2")) return false;
        Expression(b, l + 1, -1);
        return true;
    }
